# RedeemProtocol-Contracts

./: .gitignore  Makefile  README.md  go.mod  go.sum  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
EVM/: README.md  hardhat.config.ts  package-lock.json  package.json
EVM/contracts/: ERC6672.sol  ERC9999.sol  RedeemProtocolFactory.sol  RedeemProtocolRealm.sol  RedeemProtocolRealmV2.sol  RedeemProtocolReverse.sol  RedeemProtocolReverseV2.sol  package.json
EVM/contracts/interfaces/: IERC20Permit.sol  IERC6672.sol  IERC721Burnable.sol  IERC9999.sol
EVM/contracts/libraries/: RedeemProtocolType.sol
EVM/contracts/metatx/: MinimalForwarder.sol  (+2 more)
EVM/scripts/: createRealm.ts  createReverse.ts  deployForwarder.ts  grantRole.ts  redeem.ts  utils.ts
EVM/tasks/: tasks.ts
EVM/test/: Forwarder.ts  RedeemProtocolFactory.ts  RedeemProtocolRealm.ts
WAX/contracts/redeem/src/: CMakeLists.txt  RedeemProtocol.cpp
contracts/: RedeemProtocolCampaign.sol  RedeemProtocolFactory.sol  RedeemProtocolReverse.sol  redeemprotocol.sol
contracts/interfaces/: IERC20.sol  IERC20Permit.sol  IERC721.sol  IERC721Burnable.sol  IERC721Ownable.sol  IRedeemProtocolCampaign.sol
contracts/libraries/: RedeemProtocolType.sol
contracts/metatx/: MinimalForwarder.sol
contracts/test/: RPC20.sol  RPC721.sol
golang/core/: core_gen.go
golang/redeemprotocolfactory/: RedeemProtocolFactory_gen.go
golang/redeemprotocolreverse/: RedeemProtocolReverse_gen.go
scripts/: deployFactory.ts  metaRedeem.ts
test/: RedeemProtocolFactory.ts  RedeemProtocolReverse.ts
(+14 files in other folders)
